@@ -9,6 +9,7 @@ Bug fixes:
 - #1139 documents inside folderish documents lose their workflow state
 - #1239 Folderish documents workflows are not enough
 recursivefolderish document is republished
+- don't create states/transitions if they already exist
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - added util.updateEffectiveDate public function to update empty effective_date
